--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,11 @@
 {
-	"name": "less-flexbox",
-	"version": "0.0.1",
+	"name": "less-flexbox-demo",
+	"version": "1.0.0",
 	"authors": [
 		"Luke Madera <luke.madera@gmail.com>"
 	],
-	"description": "Flexbox LESS mixins and classes",
+	"description": "Demo",
 	"keywords": [
-		"flexbox",
-		"less"
 	],
 	"license": "MIT",
 	"ignore": [
@@ -20,5 +18,6 @@
 	"dependencies": {
 	},
 	"devDependencies": {
+		"lesshat":"latest"
 	}
 }
