--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,13 @@
 {
-	"name": "less-flexbox-demo",
+	"name": "less-flexbox",
 	"version": "1.0.0",
 	"authors": [
 		"Luke Madera <luke.madera@gmail.com>"
 	],
-	"description": "Demo",
+	"description": "Flexbox LESS mixins and classes for cross browser compatibility",
 	"keywords": [
+		"less",
+		"flexbox"
 	],
 	"license": "MIT",
 	"ignore": [
@@ -18,6 +20,5 @@
 	"dependencies": {
 	},
 	"devDependencies": {
-		"lesshat":"latest"
 	}
 }
